--- a/css/title.css
+++ b/css/title.css
@@ -14,7 +14,7 @@ svg circle {
 
 #nick-bond {
   font-size: 100px;
-  font-weight: 400;
+  font-weight: 700;
   z-index: 100;
   display: inline;
 }
